// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`1 staging percentage 1`] = `
{
  "files": [
    {
      "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
      "size": 89,
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "path": "TestApp Setup 1.1.0.exe",
  "releaseDate": "2024-01-01T00:00:00.000Z",
  "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
  "stagingPercentage": 1,
  "version": "1.1.0",
}
`;

exports[`1 staging percentage 2`] = `
[
  "checking-for-update",
]
`;

exports[`90 staging percentage 1`] = `
{
  "files": [
    {
      "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
      "size": 89,
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "path": "TestApp Setup 1.1.0.exe",
  "releaseDate": "2024-01-01T00:00:00.000Z",
  "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
  "stagingPercentage": 90,
  "version": "1.1.0",
}
`;

exports[`90 staging percentage 2`] = `
[
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`cancel download with progress 1`] = `"cancelled"`;

exports[`checkForUpdates several times 1`] = `
{
  "files": [
    {
      "sha512": "@sha512",
      "size": "@size",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "path": "TestApp Setup 1.1.0.exe",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.1.0",
}
`;

exports[`checkForUpdates several times 2`] = `
{
  "files": [
    {
      "sha512": "@sha512",
      "size": "@size",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "path": "TestApp Setup 1.1.0.exe",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.1.0",
}
`;

exports[`checkForUpdates several times 3`] = `
[
  "checking-for-update",
  "update-available",
  "update-downloaded",
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`downgrade (disallowed, beta) 1`] = `
{
  "files": [
    {
      "sha512": "@sha512",
      "size": "@size",
      "url": "TestApp Setup 1.0.0.exe",
    },
  ],
  "path": "TestApp Setup 1.0.0.exe",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.0",
}
`;

exports[`file url generic - manual download 1`] = `
{
  "files": [
    {
      "sha512": "@sha512",
      "size": "@size",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "path": "TestApp Setup 1.1.0.exe",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.1.0",
}
`;

exports[`file url generic - manual download 2`] = `
[
  "checking-for-update",
  "update-available",
]
`;

exports[`file url generic 1`] = `
{
  "files": [
    {
      "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
      "size": 89,
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "path": "TestApp Setup 1.1.0.exe",
  "releaseDate": "2024-01-01T00:00:00.000Z",
  "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
  "version": "1.1.0",
}
`;

exports[`file url generic 2`] = `
[
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`invalid signature 1`] = `"ERR_UPDATER_INVALID_SIGNATURE"`;

exports[`invalid signature 2`] = `
[
  "checking-for-update",
  "update-available",
  "error",
]
`;

exports[`test custom signature verifier - signing error message 1`] = `"ERR_UPDATER_INVALID_SIGNATURE"`;

exports[`test custom signature verifier - signing error message 2`] = `
[
  "checking-for-update",
  "update-available",
  "error",
]
`;

exports[`test custom signature verifier 1`] = `
{
  "files": [
    {
      "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
      "size": 89,
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "path": "TestApp Setup 1.1.0.exe",
  "releaseDate": "2024-01-01T00:00:00.000Z",
  "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
  "version": "1.1.0",
}
`;

exports[`test custom signature verifier 2`] = `
[
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`test download and install 1`] = `
{
  "files": [
    {
      "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
      "size": 89,
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "path": "TestApp Setup 1.1.0.exe",
  "releaseDate": "2024-01-01T00:00:00.000Z",
  "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
  "version": "1.1.0",
}
`;

exports[`test download and install 2`] = `
[
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`test error 1`] = `"ERR_INVALID_ARG_TYPE"`;

exports[`test error 2`] = `
[
  "checking-for-update",
  "error",
]
`;

exports[`valid signature - multiple publisher DNs 1`] = `
{
  "files": [
    {
      "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
      "size": 89,
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "path": "TestApp Setup 1.1.0.exe",
  "releaseDate": "2024-01-01T00:00:00.000Z",
  "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
  "version": "1.1.0",
}
`;

exports[`valid signature - multiple publisher DNs 2`] = `
[
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`valid signature 1`] = `
{
  "files": [
    {
      "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
      "size": 89,
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "path": "TestApp Setup 1.1.0.exe",
  "releaseDate": "2024-01-01T00:00:00.000Z",
  "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
  "version": "1.1.0",
}
`;

exports[`valid signature 2`] = `
[
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`valid signature using DN 1`] = `
{
  "files": [
    {
      "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
      "size": 89,
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "path": "TestApp Setup 1.1.0.exe",
  "releaseDate": "2024-01-01T00:00:00.000Z",
  "sha512": "SqrhYEyV9FiFDfI/7/4KPxwgp2K6fOAKWtcq3q0340lZuffH9mG86uYg92WaB40LrTeWcUSrfTT7Z1GZIGwk6Q==",
  "version": "1.1.0",
}
`;

exports[`valid signature using DN 2`] = `
[
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;
